syntax = "proto3";

package product;

option go_package = "./";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (stream ListProductsResponse);
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
}

message ListProductsRequest {}

message ListProductsResponse {
  string id = 1;
  string name = 2;
  double price = 3;
}